--- a/src/index.html
+++ b/src/index.html
@@ -209,37 +209,37 @@
       <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="mobile_item mobile_item_1">
             <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
             <div class="mobile_item_plus"></div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="mobile_item mobile_item_2">
             <div class="mobile_item_subtitle">надежная подача</div>
             <div class="mobile_item_plus"></div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="mobile_item mobile_item_3">
             <div class="mobile_item_subtitle">прозрачные цены</div>
             <div class="mobile_item_plus"></div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="mobile_item mobile_item_4">
             <div class="mobile_item_subtitle">безналичная оплата</div>
             <div class="mobile_item_plus"></div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="mobile_item mobile_item_5">
             <div class="mobile_item_subtitle">обратная связь</div>
             <div class="mobile_item_plus"></div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="mobile_item mobile_item_6">
             <div class="mobile_item_subtitle">разделить стоимость поездки</div>
             <div class="mobile_item_plus"></div>
@@ -250,12 +250,18 @@
   </section>
   <section class="choice">
     <div class="container">
-      <div class="label">возможности</div>
-      <div class="title">Выбор - отличная штука!</div>
-      <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-      <div class="choice_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+        <div class="black"></div>
+        <div class="label label_white">возможности</div>
+        <h2 class="title title_white hidden-320">Выбор - отличная штука!</h2>
+        <div class="subtitle subtitle_white hidden-320">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+
+        <img src="img/car.png" alt="uber car" class="choice_img">
+        <div class="choice_descr">
+            Машины на каждый день.<br>
+            Лучше, быстрее и дешевле, чем такси
+        </div>
     </div>
-  </section>
+</section>
   <section class="require">
     <div class="container">
       <div class="label">возможности</div>
@@ -334,52 +340,55 @@
   <footer>
     <div class="footer_divider"></div>
     <div class="footer_wrapper">
-      <div>
-        <div class="footer_social">
-          <a href="#" class="footer_social_item">
-            <i class="fa fa-vk"></i>
-          </a>
-          <a href="#" class="footer_social_item">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="#" class="footer_social_item">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a href="#" class="footer_social_item">
-            <i class="fa fa-telegram"></i>
-          </a>
+        <!-- Если не оборачивать каждый блок в обертку - получится криво -->
+        <div>
+            <div class="footer_social">
+                <a href="#" class="footer_social_item">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#" class="footer_social_item">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" class="footer_social_item">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="#" class="footer_social_item">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
         </div>
-      </div>
-      <div class="footer_links">
-        <div class="footer_links_main">
-          <a href="#">на главную</a>
-          <a href="#">города</a>
-          <a href="#">для водителей</a>
+        <div>
+            <div class="footer_links">
+                <div class="footer_links_main">
+                    <a href="#">на главную</a>
+                    <a href="#">города</a>
+                    <a href="#">для водителей</a>
+                </div>
+                <div class="footer_links_sub">
+                    <a href="#">центр поддержки</a>
+                    <a href="#">вакансии</a>
+                    <a href="#">разработчики</a>
+                    <a href="#">блог</a>
+                    <a href="#">о нас</a>
+                </div>
+                <a href="#" class="footer_links_lang">Русский</a>
+            </div>
         </div>
-        <div class="footer_links_sub">
-          <a href="#">центр поддержки</a>
-          <a href="#">вакансии</a>
-          <a href="#">разработчики</a>
-          <a href="#">блог</a>
-          <a href="#">о нас</a>
+        <div>
+            <div class="footer_mobile">
+                <a href="#">
+                    <img class="footer_mobile_img" src="icon/google_play.png" alt="App Store">
+                </a>
+                <a href="#">
+                    <img class="footer_mobile_img" src="icon/google_play.png" alt="Google play">
+                </a>
+                <a href="#">
+                    <img class="footer_mobile_img" src="icon/google_play.png" alt="Windows store">
+                </a>
+            </div>
         </div>
-        <a href="#" class="footer_links_lang">русский</a>
-      </div>
-      <div>
-        <div class="footer_mobile">
-          <a href="#">
-            <img src="img/app_store.png" alt="App Store">
-          </a>
-          <a href="#">
-            <img src="img/google_play.png" alt="Google play">
-          </a>
-          <a href="#">
-            <img src="img/windows_store.png" alt="Windows store">
-          </a>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
 
   <script src="js/script.js"></script>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
